# swak

./: .dockerignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  mkdocs.yml  pyproject.toml  setup.py  test_0b.parquet
.github/: CODEOWNERS
.github/workflows/: ci-pipeline.yml  lint-test.yml  lint.yml  publish-documentation.yml  publish-package.yml  publishing.yml
docs/: index.md
docs/api/: dictionary.md  funcflow.md  magic.md
docs/source/: aws.rst  cli.md  cli.rst  cloud.md  cloud.rst  conf.py  dictionary.rst  fields.rst  funcflow.md  funcflow.rst  gcp.rst  index.rst  io.rst  jsonobject.md  jsonobject.rst  loggers.md  loggers.rst  magic.rst  misc.rst  pd.md  pd.rst  pl.rst  pt.md  pt.rst  read.rst  text.md  text.rst
docs/source/funcflow/: concurrent.rst  loggers.rst
docs/source/pt/: attention.rst  blocks.rst  create.rst  dists.rst  embed.rst  io.rst  losses.rst  misc.rst  mix.rst  positions.rst  train.rst  transformer.rst  weighted.rst
src/swak/: __init__.py
src/swak/cli/: __init__.py  argparser.py  envparser.py
src/swak/cloud/: __init__.py
src/swak/dictionary/: __init__.py  valuesgetter.py
src/swak/funcflow/: __init__.py  exceptions.py  fallback.py  filter.py  fork.py  map.py  misc.py  partial.py  pipe.py  reduce.py  safe.py  side_effect.py  split.py  sum.py
src/swak/io/: __init__.py  copy.py  csv.py  excel.py  find.py  json.py  reader.py  toml.py  writer.py  yaml.py
src/swak/jsonobject/: __init__.py  jsonobject.py
src/swak/loggers/: file.py  formats.py  json.py
src/swak/misc/: __init__.py  repr.py
swak/: __init__.py
swak/cli/: __init__.py  argparser.py  envparser.py  exceptions.py  importer.py
swak/cloud/: __init__.py
swak/dictionary/: __init__.py  nonedropper.py  valuesgetter.py
swak/funcflow/: __init__.py  curry.py  exceptions.py  fallback.py  filter.py  fork.py  map.py  misc.py  partial.py  pipe.py  reduce.py  route.py  safe.py  sideeffects.py  split.py  sum.py
swak/io/: __init__.py  copy.py  discover.py  find.py  json.py  parquet.py  reader.py  toml.py  types.py  writer.py  yaml.py
swak/jsonobject/: __init__.py  exceptions.py  jsonobject.py  jsonobjects.py
swak/loggers/: __init__.py  std.py  stdout.py
swak/magic/: __init__.py  repr.py
swak/misc/: __init__.py  enums.py  loggers.py  repr.py
swak/pd/: __init__.py  agg.py  apply.py  asfreq.py  astype.py  column_selector.py  columns_selector.py  copy.py  drop.py  dropna.py  frame.py  groupby.py  join.py  mapper.py  read.py  rename.py  reset_index.py  rolling_window.py  set_index.py  sort_values.py  types.py  write.py
swak/pl/: __init__.py  frame.py  groupby.py  misc.py
swak/pt/: __init__.py  blocks.py  create.py  dists.py  embed.py  exceptions.py  io.py  losses.py  misc.py  transformer.py  types.py
swak/text/: __init__.py  interpolate.py  misc.py  parse.py  read.py  resource.py  write.py
tests/cli/: test_argparser.py  test_envparser.py  test_importer.py
tests/dictionary/: test_nonedropper.py  test_valuesgetter.py
tests/funcflow/: test_curry.py  test_fallback.py  test_filter.py  test_fork.py  test_map.py  test_misc.py  test_partial.py  test_pipe.py  test_reduce.py  test_route.py  test_safe.py  test_side_effect.py  test_sideeffects.py  test_split.py  test_sum.py
tests/io_/: test_copy.py  test_csv_reader.py  test_discover.py  test_excel_reader.py  test_find.py  test_json.py  test_json_reader.py  test_json_writer.py  test_parquet.py  test_parquet_reader.py  test_parquet_writer.py  test_parse.py  test_reader.py  test_toml.py  test_toml_reader.py  test_toml_writer.py  test_writer.py  test_yaml.py  test_yaml_reader.py  test_yaml_writer.py  valid.ods
tests/jsonbject/: test_custom_types.py  test_dictionary_fields.py  test_instantiation.py  test_magic.py  test_members.py  test_nesting.py  test_schemameta.py
tests/loggers/: test_file_logger.py  test_json_handler.py  test_json_logger.py  test_std_logger.py
tests/magic/: test_argrepr.py  test_indentrepr.py
tests/misc/: test_argrepr.py  test_file_logger.py  test_indentrepr.py  test_json_handler.py  test_json_logger.py  test_std_logger.py  test_stdout_logger.py
tests/pd/: test_agg.py  test_apply.py  test_asfreq.py  test_assign.py  test_astype.py  test_columnselector.py  test_columnsselector.py  test_copy.py  test_drop.py  test_drop_duplicates.py  test_dropna.py  test_explode.py  test_fillna.py  test_groupby.py  test_mapper.py  test_read.py  test_rename.py  test_reset_index.py  test_set_index.py  test_sort_values.py  test_transform.py  test_write.py
tests/pt/: __init__.py  test_create.py  test_dists.py  test_io.py  test_misc.py
tests/text/: test_fill.py  test_jsonreader.py  test_jsonwriter.py  test_parse.py  test_render.py  test_resource.py  test_tomlparser.py  test_tomlreader.py  test_tomlwriter.py  test_yamlparser.py  test_yamlreader.py  test_yamlwriter.py
(+401 files in other folders)
