[build-system]
requires = [
    "setuptools>=70",
    "setuptools_scm>=8.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "swak"
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=17.0",
  "pyyaml>=6.0",
  "google-cloud-bigquery>=3.25",
  "google-cloud-storage>=2.18",
  "pandas-gbq>=0.23"
]
authors = [
  {name = "yedivanseven", email = "yedivanseven@icloud.com"},
]
description = "Swiss army knife for functional data-science projects."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    'functional',
    'tools',
    'utilities',
    'helpers',
]
classifiers = [
    'Development Status :: 1 - Planning',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.12',
    'Topic :: Utilities',
    'License :: OSI Approved :: MIT License',
]

[tool.setuptools]
packages = ['swak']

[tool.setuptools_scm]
version_file = "version.env"
version_file_template = "SETUPTOOLS_SCM_PRETEND_VERSION={version}"
